# ltb-util

./: .buildinfo  .clang-format  .cmake-format.py  .gitignore  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.html  README.md  WORKSPACE  conf.py  format.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/docs/_api/: classltb_1_1util_1_1AsyncTaskRunner.doctree  classltb_1_1util_1_1AtomicData.doctree  classltb_1_1util_1_1BlockingQueue.doctree  classltb_1_1util_1_1Error.doctree  classltb_1_1util_1_1GenericGuard.doctree  classltb_1_1util_1_1MultiUuid.doctree  classltb_1_1util_1_1ScopedTimer.doctree  classltb_1_1util_1_1Timer.doctree  classltb_1_1util_1_1Uuid.doctree  classltb_1_1util_1_1UuidGenerator.doctree  classtl_1_1expected.doctree  define_comparison__utils_8hpp_1a1a243327ff6a36dea85b8ce1a56b58d7.doctree  define_error_8hpp_1a710103504cc979878810f07db4fcc2fc.doctree  define_error_8hpp_1a9fea57f3db8f8dbf3c7e7d33d4dde497.doctree  define_result_8hpp_1ac00a668fc7d1d0fdd8366c8f2e6edcc0.doctree  dir_include.doctree  dir_include_ltb.doctree  dir_include_ltb_util.doctree  file_include_ltb_util_async_task_runner.hpp.doctree  file_include_ltb_util_atomic_data.hpp.doctree  file_include_ltb_util_blocking_queue.hpp.doctree  file_include_ltb_util_comparison_utils.hpp.doctree  file_include_ltb_util_container_utils.hpp.doctree  file_include_ltb_util_duration.hpp.doctree  file_include_ltb_util_enum_bits.hpp.doctree  file_include_ltb_util_enum_flags.hpp.doctree  file_include_ltb_util_error.hpp.doctree  file_include_ltb_util_error_callback.hpp.doctree  file_include_ltb_util_file_utils.hpp.doctree  file_include_ltb_util_generic_guard.hpp.doctree  file_include_ltb_util_hash_utils.hpp.doctree  file_include_ltb_util_ignore.hpp.doctree  file_include_ltb_util_power_of_2.hpp.doctree  file_include_ltb_util_priority_tag.hpp.doctree  file_include_ltb_util_result.hpp.doctree  file_include_ltb_util_string.hpp.doctree  file_include_ltb_util_timer.hpp.doctree  file_include_ltb_util_type_string.hpp.doctree  file_include_ltb_util_uuid.hpp.doctree  file_include_ltb_util_variant_utils.hpp.doctree  (+127 more)
.github/workflows/: ci.yml  cmake.yml  docs.yml
_sources/: README.md.txt  index.md.txt
_sources/docs/_api/: classltb_1_1util_1_1AsyncTaskRunner.rst.txt  classltb_1_1util_1_1AtomicData.rst.txt  classltb_1_1util_1_1BlockingQueue.rst.txt  classltb_1_1util_1_1Error.rst.txt  classltb_1_1util_1_1GenericGuard.rst.txt  classltb_1_1util_1_1MultiUuid.rst.txt  classltb_1_1util_1_1ScopedTimer.rst.txt  classltb_1_1util_1_1Timer.rst.txt  classltb_1_1util_1_1Uuid.rst.txt  classltb_1_1util_1_1UuidGenerator.rst.txt  classtl_1_1expected.rst.txt  define_comparison__utils_8hpp_1a1a243327ff6a36dea85b8ce1a56b58d7.rst.txt  define_error_8hpp_1a710103504cc979878810f07db4fcc2fc.rst.txt  define_error_8hpp_1a9fea57f3db8f8dbf3c7e7d33d4dde497.rst.txt  define_result_8hpp_1ac00a668fc7d1d0fdd8366c8f2e6edcc0.rst.txt  dir_include.rst.txt  dir_include_ltb.rst.txt  dir_include_ltb_util.rst.txt  file_include_ltb_util_async_task_runner.hpp.rst.txt  file_include_ltb_util_atomic_data.hpp.rst.txt  file_include_ltb_util_blocking_queue.hpp.rst.txt  file_include_ltb_util_comparison_utils.hpp.rst.txt  file_include_ltb_util_container_utils.hpp.rst.txt  file_include_ltb_util_duration.hpp.rst.txt  file_include_ltb_util_enum_bits.hpp.rst.txt  file_include_ltb_util_enum_flags.hpp.rst.txt  (+141 more)
ci/: build_and_run.sh  download_cmake.sh  install-docs-dependenies.sh
cmake/: CCache.cmake  CTest.cmake  CTestUnix.cmake  ClangTidy.cmake  CreateProtoLibrary.cmake  LtbAddExecutable.cmake  LtbAddLibrary.cmake  LtbAddTarget.cmake  LtbConfig.cmake  LtbCreateDefaultTargets.cmake  LtbSetProperties.cmake  ThirdParty.cmake
docs/: .gitignore  conf.py  index.md  index.rst
docs/_api/: classltb_1_1util_1_1AsyncTaskRunner.html  classltb_1_1util_1_1AtomicData.html  classltb_1_1util_1_1BlockingQueue.html  classltb_1_1util_1_1Error.html  classltb_1_1util_1_1GenericGuard.html  classltb_1_1util_1_1MultiUuid.html  classltb_1_1util_1_1ScopedTimer.html  classltb_1_1util_1_1Timer.html  classltb_1_1util_1_1Uuid.html  classltb_1_1util_1_1UuidGenerator.html  classtl_1_1expected.html  define_comparison__utils_8hpp_1a1a243327ff6a36dea85b8ce1a56b58d7.html  define_error_8hpp_1a710103504cc979878810f07db4fcc2fc.html  define_error_8hpp_1a9fea57f3db8f8dbf3c7e7d33d4dde497.html  define_result_8hpp_1ac00a668fc7d1d0fdd8366c8f2e6edcc0.html  dir_include.html  dir_include_ltb.html  dir_include_ltb_util.html  file_include_ltb_util_async_task_runner.hpp.html  file_include_ltb_util_atomic_data.hpp.html  file_include_ltb_util_blocking_queue.hpp.html  file_include_ltb_util_comparison_utils.hpp.html  file_include_ltb_util_container_utils.hpp.html  file_include_ltb_util_duration.hpp.html  file_include_ltb_util_enum_bits.hpp.html  file_include_ltb_util_enum_flags.hpp.html  file_include_ltb_util_error.hpp.html  file_include_ltb_util_error_callback.hpp.html  file_include_ltb_util_file_utils.hpp.html  file_include_ltb_util_generic_guard.hpp.html  file_include_ltb_util_hash_utils.hpp.html  file_include_ltb_util_ignore.hpp.html  file_include_ltb_util_power_of_2.hpp.html  file_include_ltb_util_priority_tag.hpp.html  file_include_ltb_util_result.hpp.html  file_include_ltb_util_string.hpp.html  file_include_ltb_util_timer.hpp.html  file_include_ltb_util_type_string.hpp.html  file_include_ltb_util_uuid.hpp.html  file_include_ltb_util_variant_utils.hpp.html  (+127 more)
example/: CMakeLists.txt
example/protos/chat/: chat_room.proto  message.proto
example/src/: example_client.cpp  example_client.hpp  example_server.cpp  example_server.hpp  main.cpp
include/google/: AlmostEquals.h
ltb-util/: CMakeLists.txt
ltb-util/cmake/: LtbConfig.cmake  ThirdParty.cmake
src/: async_task_runner.cpp  atomic_data.cpp  blocking_queue.cpp  comparison_utils.cpp  container_utils.cpp  duration.cpp  enum_bits.cpp  error_callback.cpp  hash_utils.cpp  ignore.cpp  ltb_paths.hpp.in  power_of_2.cpp  priority_tag.cpp  result.cpp  variant_utils.cpp
(+56 files in other folders)
